--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   rallly_db:
-    image: postgres:14.2
+    image: docker.io/library/postgres:14.2
     restart: always
     volumes:
       - db-data:/var/lib/postgresql/data
@@ -15,7 +15,7 @@ services:
       retries: 5
 
   rallly:
-    image: lukevella/rallly:latest
+    image: docker.io/lukevella/rallly:latest
     restart: always
     depends_on:
       rallly_db:
